--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
 <html>
-<head> </head>
+<head> 
+ <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137901229-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-137901229-1');
+</script>
+ 
+  
+</head>
 <body>
 <img src="./assets/giphy.webp">
 </body>
